Added some more properties to config.properties.

--- a/config.properties
+++ b/config.properties
@@ -2,6 +2,11 @@
 # All configuration that is not yet classified in a specific file is "dumped" here. 
 # (Using this file is better than recompiling the whole program)
 
+ingame.font.filename = resources/liberation.ttf
+ingame.font.size = 14
+
+ingame.bg.filename = resources/background.jpg
+
 # player sprite (dimensions in pixels)
 player.sprite.filename = resources/pijamaman-1.png
 player.sprite.width = 56
