Added reference pixel property to config.properties.

--- a/config.properties
+++ b/config.properties
@@ -11,6 +11,7 @@ ingame.bg.filename = resources/background.jpg
 player.sprite.filename = resources/pijamaman-1.png
 player.sprite.width = 56
 player.sprite.height = 84
+player.sprite.reference_pixel.y = -2
 player.sprite.anim.stand_left.frame_count = 1
 player.sprite.anim.stand_right.frame_count = 1
 player.sprite.anim.walk_left.frame_count = 4
@@ -23,6 +24,19 @@ player.sprite.anim.walk_right.frame_duration = 0.25
 #player.sprite.filename = resources/gb-1.png
 #player.sprite.width = 59
 #player.sprite.height = 85
+#player.sprite.reference_pixel.y = -2
+#player.sprite.anim.stand_left.frame_count = 1
+#player.sprite.anim.stand_right.frame_count = 1
+#player.sprite.anim.walk_left.frame_count = 6
+#player.sprite.anim.walk_left.frame_duration = 0.667
+#player.sprite.anim.walk_right.frame_count = 6
+#player.sprite.anim.walk_right.frame_duration = 0.667
+
+# PC
+#player.sprite.filename = resources/pc-1.png
+#player.sprite.width = 24
+#player.sprite.height = 36
+#player.sprite.reference_pixel.y = -4
 #player.sprite.anim.stand_left.frame_count = 1
 #player.sprite.anim.stand_right.frame_count = 1
 #player.sprite.anim.walk_left.frame_count = 6
