Added proper stacking mechanics to inventory.

--- a/config.properties
+++ b/config.properties
@@ -5,6 +5,9 @@
 ingame.font.filename = resources/liberation.ttf
 ingame.font.size = 14
 
+ingame.inventory.font.filename = resources/liberation.ttf
+ingame.inventory.font.size = 10
+
 ingame.bg.filename = resources/background.jpg
 
 # player sprite (dimensions in pixels)
