Now inventory bg and font colors can be specified in config.properties.

--- a/config.properties
+++ b/config.properties
@@ -5,8 +5,10 @@
 ingame.font.filename = resources/liberation.ttf
 ingame.font.size = 14
 
+ingame.inventory.color = 150, 200, 250, 96
 ingame.inventory.font.filename = resources/liberation.ttf
 ingame.inventory.font.size = 10
+ingame.inventory.font.color = 0,0,0
 
 ingame.bg.filename = resources/background.jpg
 
