Change inventory drawing a little bit.

--- a/config.properties
+++ b/config.properties
@@ -5,7 +5,7 @@
 ingame.font.filename = resources/liberation.ttf
 ingame.font.size = 14
 
-ingame.inventory.color = 0xFF0000
+ingame.inventory.color = #E28922
 ingame.inventory.font.filename = resources/liberation.ttf
 ingame.inventory.font.size = 10
 ingame.inventory.font.color = 0,0,0
