Added simple night-day cycle mechanism.

--- a/config.properties
+++ b/config.properties
@@ -10,7 +10,8 @@ ingame.inventory.font.filename = resources/liberation.ttf
 ingame.inventory.font.size = 10
 ingame.inventory.font.color = 0,0,0
 
-ingame.bg.filename = resources/background.jpg
+ingame.bg_day.filename = resources/background.jpg
+ingame.bg_night.filename = resources/bg-night.jpg
 
 # player sprite (dimensions in pixels)
 player.sprite.filename = resources/pijamaman-1.png
