WIP new configurable settings on config.properties.

--- a/config.properties
+++ b/config.properties
@@ -49,3 +49,80 @@ player.sprite.anim.walk_right.frame_duration = 0.25
 #player.sprite.anim.walk_left.frame_duration = 0.667
 #player.sprite.anim.walk_right.frame_count = 6
 #player.sprite.anim.walk_right.frame_duration = 0.667
+
+# tilesets
+ingame.tileset1.sprite.filename = resources/tileset-dirt.png
+ingame.tileset1.sprite.width = 16
+ingame.tileset1.sprite.height = 16
+
+ingame.tileset2.sprite.filename = resources/tileset-stone.png
+ingame.tileset2.sprite.width = 16
+ingame.tileset2.sprite.height = 16
+
+ingame.tileset3.sprite.filename = resources/tileset-water.png
+ingame.tileset3.sprite.width = 16
+ingame.tileset3.sprite.height = 16
+ingame.tileset3.sprite.frame_count = 3
+ingame.tileset3.sprite.frame_duration = 0.25
+
+ingame.tileset4.sprite.filename = resources/tileset-grass.png
+ingame.tileset4.sprite.width = 16
+ingame.tileset4.sprite.height = 16
+
+# block types
+block_type1.name = dirt
+block_type1.tileset = tileset1
+block_type1.passability = none
+block_type1.minerable_by = pickaxe
+block_type1.detatched_item_type_id = 1
+
+block_type2.name = stone
+block_type2.tileset = tileset2
+block_type2.passability = none
+block_type2.minerable_by = pickaxe
+block_type2.detatched_item_type_id = 2
+
+block_type3.name = water
+block_type3.tileset = tileset3
+block_type3.passability = full
+
+block_type4.name = grassy dirt
+block_type4.tileset = tileset4
+block_type4.passability = none
+block_type4.minerable_by = pickaxe
+block_type4.detatched_item_type_id = 1
+
+# item types
+item_type1.name = dirt block
+item_type1.description = A dirt block is a dirt block. Get over it.
+item_type1.mass = 10
+item_type1.stacking_limit = 999
+item_type1.placeability = ground
+item_type1.placed_block_type_id = 1
+item_type1.icon.filename = resources/tileset-dirt.png
+item_type1.icon.width = 16
+item_type1.icon.height = 16
+
+item_type2.name = stone block
+item_type2.description = A stone block is a stone block. Rolling Stones!
+item_type2.mass = 20
+item_type2.stacking_limit = 999
+item_type2.placeability = ground
+item_type2.placed_block_type_id = 2
+item_type2.icon.filename = resources/tileset-stone.png
+item_type2.icon.width = 16
+item_type2.icon.height = 16
+
+item.type3.name = banana pickaxe
+item_type3.description = A special developer-only banana pickaxe. It can mine EVERYTHING.
+item_type3.mass = 50
+item_type3.stacking_limit = 1
+item_type3.usable_action = mining 
+item_type3.icon.filename = resources/banana_pickaxe.png
+
+item.type4.name = bag
+item_type4.description = "A simple bag that can carry some items."
+item_type4.mass = 0.5
+item_type4.stacking_limit = 50
+item_type4.capaciousness = 32
+item_type4.icon.filename = resources/banana_pickaxe.png
