--- a/config.properties
+++ b/config.properties
@@ -121,7 +121,7 @@ item_type3.usable_action = mining
 item_type3.icon.filename = resources/banana_pickaxe.png
 
 item.type4.name = bag
-item_type4.description = "A simple bag that can carry some items."
+item_type4.description = A simple bag that can carry some items.
 item_type4.mass = 0.5
 item_type4.stacking_limit = 50
 item_type4.capaciousness = 32
