Loading items from config.properties. SEGFAULTS when getting items!!!

--- a/config.properties
+++ b/config.properties
@@ -25,7 +25,6 @@ player.sprite.anim.walk_left.frame_duration = 0.25
 player.sprite.anim.walk_right.frame_count = 4
 player.sprite.anim.walk_right.frame_duration = 0.25
 
-
 # GB
 #player.sprite.filename = resources/gb-1.png
 #player.sprite.width = 59
@@ -102,6 +101,8 @@ item_type1.placed_block_type_id = 1
 item_type1.icon.filename = resources/tileset-dirt.png
 item_type1.icon.width = 16
 item_type1.icon.height = 16
+item_type1.icon.scale.x = 0.5
+item_type1.icon.scale.y = 0.5
 
 item_type2.name = stone block
 item_type2.description = A stone block is a stone block. Rolling Stones!
@@ -112,17 +113,21 @@ item_type2.placed_block_type_id = 2
 item_type2.icon.filename = resources/tileset-stone.png
 item_type2.icon.width = 16
 item_type2.icon.height = 16
+item_type2.icon.scale.x = 0.5
+item_type2.icon.scale.y = 0.5
 
-item.type3.name = banana pickaxe
+item_type3.name = banana pickaxe
 item_type3.description = A special developer-only banana pickaxe. It can mine EVERYTHING.
 item_type3.mass = 50
 item_type3.stacking_limit = 1
-item_type3.usable_action = mining 
+item_type3.usable_action = mining
+item_type3.is_startup_item = true 
 item_type3.icon.filename = resources/banana_pickaxe.png
+item_type3.icon.width = 24
+item_type3.icon.height = 24
 
-item.type4.name = bag
+item_type4.name = bag
 item_type4.description = A simple bag that can carry some items.
 item_type4.mass = 0.5
 item_type4.stacking_limit = 50
 item_type4.capaciousness = 32
-item_type4.icon.filename = resources/banana_pickaxe.png
