Added rudimentary precipitability rules for blocks.

--- a/config.properties
+++ b/config.properties
@@ -84,12 +84,20 @@ block_type2.detatched_item_type_id = 2
 block_type3.name = water
 block_type3.tileset = tileset3
 block_type3.passability = full
+block_type3.precipitability = liquidous
 
 block_type4.name = grassy dirt
 block_type4.tileset = tileset4
 block_type4.passability = none
 block_type4.minerable_by = pickaxe
 block_type4.detatched_item_type_id = 1
+
+#block_type5.name = sand
+#block_type5.tileset = tileset5
+#block_type5.minerable_by = shovel
+#block_type5.detatched_item_type_id = ?
+#block_type5.passability = none
+#block_type5.precipitability = arenaceous
 
 # item types
 item_type1.name = dirt block
