Configurable hour duration on config.properties.

--- a/config.properties
+++ b/config.properties
@@ -12,6 +12,7 @@ ingame.inventory.font.color = 0,0,0
 
 ingame.bg_day.filename = resources/background.jpg
 ingame.bg_night.filename = resources/bg-night.jpg
+ingame.hour_duration = 1
 
 # player sprite (dimensions in pixels)
 player.sprite.filename = resources/pijamaman-1.png
