Adding dummy blob actor as a test.

--- a/config.properties
+++ b/config.properties
@@ -140,3 +140,21 @@ item_type4.description = A simple bag that can carry some items.
 item_type4.mass = 0.5
 item_type4.stacking_limit = 50
 item_type4.capaciousness = 32
+
+# dummy enemy spec
+actor_type1.name = Toad blob
+actor_type1.description = A toad-like hostile blob.
+actor_type1.max_hp = 20
+actor_type1.faction = mob
+actor_type1.contact_damage_factor = 2
+actor_type1.sprite.filename = resources/toadblob-1.png
+actor_type1.sprite.width = 18
+actor_type1.sprite.height = 18
+actor_type1.sprite.reference_pixel.y = -2
+actor_type1.sprite.anim.stand_left.frame_count = 1
+actor_type1.sprite.anim.stand_right.frame_count = 1
+actor_type1.sprite.anim.walk_left.frame_count = 5
+actor_type1.sprite.anim.walk_left.frame_duration = 0.25
+actor_type1.sprite.anim.walk_right.frame_count = 5
+actor_type1.sprite.anim.walk_right.frame_duration = 0.25
+
